[metadata]
name = lk_scrapper
description = "lk_scrapper a General Purpose Linkedin Scrapper"
long_description = file: README.md
version = 0.0.1
author = Jean-Louis Quéguiner
author_email = jean-louis.queguiner@gadz.org
license = BSD 3-Clause License
license_file = LICENSE
keywords = linkedin, scrapper, selenium
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
packages = find:
setup_requires =
    setuptools>=30.3.0
include_package_data = True
install_requires =
    progress>=1.4
    PyYAML>=5.1.2
    argcomplete

#scripts =
#    lk_scrapper
